# busybeaver

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
docs/: INTEGRATION_en.md  INTEGRATION_zh.md
scripts/: check.sh
src/: beaver.rs  dam.rs  error.rs  fixed_count_task.rs  lib.rs  listener.rs  periodic_task.rs  range_interval_task.rs  task.rs  time_interval_task.rs  work.rs  work_fn.rs  work_result.rs
src/platform/: mod.rs  spawn.rs
tests/: beaver_tests.rs  concurrency_tests.rs  error_tests.rs  fixed_count_task_tests.rs  improvement_tests.rs  listener_tests.rs  panic_crash_tests.rs  periodic_task_tests.rs  range_interval_task_tests.rs  send_sync_tests.rs  stress_tests.rs  task_api_tests.rs  time_interval_task_tests.rs  work_ctx_tests.rs  work_tests.rs
